<resources>
    <string name="app_name">FlashcardApp</string>
    <string name="next_flashcard_button_text">Next Card</string>
    <string name="unable_to_load_flashcard_text">Could not load flashcard</string>
    <string name="flashcard_loading_text">Flashcard loading&#8230;</string>
    <string name="no_flashcards_to_show_text">No flashcards</string>
    <string name="edit_flashcard_button_text">Edit Flashcard</string>
    <string name="flashcard_front_label_text">Front</string>
    <string name="flashcard_back_label_text">Back</string>
    <string name="save_flashcard_button_text">Save</string>
    <string name="failed_save_toast_text">Save Failed!</string>
    <string name="play_game_button_text">Play Flashcard Game</string>
    <string name="show_flashcard_list_button_text">Flashcard List</string>
    <string name="setting_menu_item_text">Settings</string>
    <string name="pref_app_theme_text">App Theme</string>
    <string name="theme_options_default_value">Light</string>
    <string-array name="theme_options_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>Funky</item>
    </string-array>
    <string-array name="theme_options_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
