<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gregspitz.flashcardapp.addeditflashcard.AddEditFlashcardActivity">


    <EditText
        android:id="@+id/flashcard_front"
        android:hint="@string/flashcard_front_label_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/flashcard_back"
        android:hint="@string/flashcard_back_label_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/save_flashcard_button"
        android:text="@string/save_flashcard_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
